<resources>
    <string name="app_name">My Application</string>
    <string name="menuText1">Breakfast</string>
    <string name="menuText2">Brunch</string>
    <string name="menuText3">Lunch</string>
    <string name="menuText4">Dinner</string>
    <string name="menuText5">Dessert</string>
    <string name="menuText6">Other</string>
    <string name="avatar">avatar</string>
    <string name="extended_fab_label">+ Add recipe</string>
    <string name="recipe_list">Recipe List</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="ingredients">Recipe Ingredients</string>
    <string name="recipe_name"> Recipe Name</string>
    <string name="image_upload"> Upload Recipe Image here</string>
    <string name="recipe_addition"> Recipe Addition Page</string>
    <string name="home_page"> Home Page</string>
    <string name="recipe_name_input"> Enter recipe name</string>
    <string name="recipe_ingredients_input"> Enter recipe ingredients</string>
    <string name="menu">Menu</string>
    <string-array name="categories">
        <item>Breakfast</item>
        <item>Brunch</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Dessert</item>
        <item>Other</item>
    </string-array>
    <string name="rta_title">Recipes</string>
    <string name="rta_add">Add Recipe</string>
    <string name="rd_select">Select Image</string>
    <string name="rd_ingredient">Ingredients (comma-separated) </string>
    <string name="rd_title">Recipe Title</string>
    <string name="arp_category">Category</string>
    <string name="arp_recipe_image">Recipe Image</string>
    <string name="arp_recipe_name">Recipe Name</string>
    <string name="arp_ingredients">Ingredients here</string>
    <string name="arp_menu_button">Menu Button</string>
</resources>